--- a/lea-life.html
+++ b/lea-life.html
@@ -61,12 +61,13 @@
     <section class="u-clearfix u-grey-90 u-section-2" id="sec-de44">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-text u-text-1">Current server setup</h3>
-        <p class="u-text u-text-default u-text-2">"in house" - 1 big boy and 4 trash pc</p>
-        <p class="u-text u-text-3">SOLARHERE / 16 cores - 512 gb ram - 10TB storage raid 5&nbsp;</p>
-        <p class="u-text u-text-4">MOONAHERE x 4 / 4 cores - 20 gb ram - 500gb storage raid 0</p>
-        <p class="u-text u-text-default u-text-5">VPS - IONOS &amp; TIME4VPS host in europe</p>
-        <p class="u-text u-text-6">SOLARIUS / 8 vcores - 16gb ram - 256gb storage raid 0</p>
-        <p class="u-text u-text-7">MOONARIUS / 8vcores - 24gb ram - 256gb storage raid 0</p>
+        <p class="u-text u-text-2">SOLARHERE / 16 cores - 512 gb ram - 10TB storage raid 5&nbsp;</p>
+        <p class="u-text u-text-3">MOONAHERE x 4 / 4 cores - 20 gb ram - 500gb storage raid 0</p>
+        <p class="u-text u-text-4">SOLARIUS / 8 vcores - 16gb ram - 256gb storage raid 0</p>
+        <p class="u-text u-text-5">MOONARIUS / 8vcores - 24gb ram - 256gb storage raid 0</p>
+        <img class="u-image u-image-round u-radius-10 u-image-1" src="images/IMG_1010.jpg" alt="" data-image-width="4032" data-image-height="3024">
+        <p class="u-text u-text-default u-text-6">"in house" - 1 big boy and 4 trash pc</p>
+        <p class="u-text u-text-default u-text-7">VPS - IONOS &amp; TIME4VPS host in europe</p>
       </div>
     </section>
     
